--- a/Report/results.html
+++ b/Report/results.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2017-08-24 11:50:06</span>
+					<span class='suite-started-time'>2017-08-28 16:30:18</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 41s+484ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 2m 13s+65ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 41s+484ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 2m 13s+65ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2017-08-24 11:49:24</span> 
+							<span class='panel-lead suite-started-time'>2017-08-28 16:28:05</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2017-08-24 11:50:06</span> 
+							<span class='panel-lead suite-ended-time'>2017-08-28 16:30:18</span> 
 						</div> 
 					</div>
 				</div>
@@ -206,7 +206,6 @@
 									<li class='pass'><a href='#!'>Pass</a></li>
 									<li class='fail'><a href='#!'>Fail</a></li>
 									<li class='skip'><a href='#!'>Skip</a></li>
-										<li class='unknown'><a href='#!'>Unknown</a></li>
 									<li class='divider'></li>
 									<li class='clear'><a href='#!'>Clear Filters</a></li>
 								</ul>
@@ -238,19 +237,19 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active unknown ' extentid='bb278f93-a5ba-44ec-bff8-bb9946c92bcd'>
+										<li class='collection-item test displayed active pass ' extentid='cdb583a6-797c-4395-ac1e-b8887df1492f'>
 											<div class='test-head'>
-												<span class='test-name'>LoginTestCase::testcase </span>
-												<span class='test-status label right outline capitalize unknown'>unknown</span>
+												<span class='test-name'>NaukriTestCase1::test </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2017-08-24 11:49:24</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2017-08-28 16:28:05</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
-												<div class='test-desc'>testcase</div>
+												<div class='test-desc'>test</div>
 												<div class='test-attributes'>
 												</div>
 												<div class='test-steps'>
@@ -263,6 +262,56 @@
 															</tr>
 														</thead>
 														<tbody>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>16:28:34</td>
+																	<td class='step-details'>successfully clicked on element</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>16:28:37</td>
+																	<td class='step-details'>successfully clicked on element</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>16:28:38</td>
+																	<td class='step-details'>successfully clicked on element</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>16:28:57</td>
+																	<td class='step-details'>successfully clicked on element</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>16:29:00</td>
+																	<td class='step-details'>successfully clicked on element</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>16:29:09</td>
+																	<td class='step-details'>successfully clicked on element</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>16:29:10</td>
+																	<td class='step-details'>successfully clicked on element</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>16:29:17</td>
+																	<td class='step-details'>successfully clicked on element</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>16:29:54</td>
+																	<td class='step-details'>successfully clicked on element</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>16:30:03</td>
+																	<td class='step-details'>successfully clicked on element</td>
+																</tr>
 														</tbody>
 													</table>
 													<ul class='collapsible node-list' data-collapsible='accordion'>
