--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8486a3">  <td>17/08/26 18:07:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Rest_Methods.get()[pri:0, instance:com.ctli.it.restAssured.Rest_Methods@53f65459]">get</td> 
-  <td>main@243745864</td>   <td></td> </tr>
+<tr bgcolor="bbe3a5">  <td>17/08/28 13:20:15</td>   <td>0</td> <td title="&gt;&gt;TestNgInitialization.initialSetUp()[pri:0, instance:com.ctli.it.testcases.NaukriTestCase1@11438d26]">&gt;&gt;initialSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1800890735</td>   <td></td> </tr>
+<tr bgcolor="bbe3a5">  <td>17/08/28 13:20:15</td>   <td>349</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgInitialization.launchApp(java.lang.reflect.Method, org.testng.xml.XmlTest)[pri:0, instance:com.ctli.it.testcases.NaukriTestCase1@11438d26]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@1800890735</td>   <td></td> </tr>
+<tr bgcolor="7aa9ba">  <td>17/08/28 13:20:15</td>   <td>360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NaukriTestCase1.test()[pri:0, instance:com.ctli.it.testcases.NaukriTestCase1@11438d26]">test</td> 
+  <td>main@1800890735</td>   <td></td> </tr>
 </table>
