--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9a285">  <td>17/08/24 11:50:06</td>   <td>0</td> <td title="&lt;&lt;TestNgInitialization.afterSuite(org.testng.xml.XmlTest)[pri:0, instance:com.ctli.it.testcases.LoginTestCase@335eadca]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468357786</td>   <td></td> </tr>
-<tr bgcolor="a9a285">  <td>17/08/24 11:50:05</td>   <td>-354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgInitialization.closeApp(java.lang.reflect.Method, org.testng.xml.XmlTest, org.testng.ITestResult)[pri:0, instance:com.ctli.it.testcases.LoginTestCase@335eadca]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1468357786</td>   <td></td> </tr>
-<tr bgcolor="a9a285">  <td>17/08/24 11:49:24</td>   <td>-41435</td> <td title="&gt;&gt;TestNgInitialization.initialSetUp()[pri:0, instance:com.ctli.it.testcases.LoginTestCase@335eadca]">&gt;&gt;initialSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468357786</td>   <td></td> </tr>
-<tr bgcolor="a9a285">  <td>17/08/24 11:49:24</td>   <td>-41160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgInitialization.launchApp(java.lang.reflect.Method, org.testng.xml.XmlTest)[pri:0, instance:com.ctli.it.testcases.LoginTestCase@335eadca]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td>  <td>main@1468357786</td>   <td></td> </tr>
-<tr bgcolor="9898eb">  <td>17/08/24 11:49:45</td>   <td>-20673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.testcase()[pri:0, instance:com.ctli.it.testcases.LoginTestCase@335eadca]">testcase</td> 
-  <td>main@1468357786</td>   <td></td> </tr>
+<tr bgcolor="94e588">  <td>17/08/28 16:30:17</td>   <td>0</td> <td title="&lt;&lt;TestNgInitialization.afterSuite(org.testng.xml.XmlTest)[pri:0, instance:com.ctli.it.testcases.NaukriTestCase1@7a1ebcd8]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1805013491</td>   <td></td> </tr>
+<tr bgcolor="94e588">  <td>17/08/28 16:30:13</td>   <td>-4543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNgInitialization.closeApp(java.lang.reflect.Method, org.testng.xml.XmlTest, org.testng.ITestResult)[pri:0, instance:com.ctli.it.testcases.NaukriTestCase1@7a1ebcd8]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1805013491</td>   <td></td> </tr>
+<tr bgcolor="94e588">  <td>17/08/28 16:28:04</td>   <td>-133082</td> <td title="&gt;&gt;TestNgInitialization.initialSetUp()[pri:0, instance:com.ctli.it.testcases.NaukriTestCase1@7a1ebcd8]">&gt;&gt;initialSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1805013491</td>   <td></td> </tr>
+<tr bgcolor="94e588">  <td>17/08/28 16:28:05</td>   <td>-132621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNgInitialization.launchApp(java.lang.reflect.Method, org.testng.xml.XmlTest)[pri:0, instance:com.ctli.it.testcases.NaukriTestCase1@7a1ebcd8]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@1805013491</td>   <td></td> </tr>
+<tr bgcolor="fe8984">  <td>17/08/28 16:28:32</td>   <td>-105534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NaukriTestCase1.test()[pri:0, instance:com.ctli.it.testcases.NaukriTestCase1@7a1ebcd8]">test</td> 
+  <td>main@1805013491</td>   <td></td> </tr>
 </table>
