--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,14 +31,20 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">FF Test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">132.6 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">FF Test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr class="stripe"><td style="text-align:left;padding-right:2em">IE Test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Mobile Test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">296.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr class="total"><td>Total</td>
+<td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">296.6 seconds</td><td colspan="2">&nbsp;</td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">FF Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">com.ctli.it.testcases.NaukriTestCase1</td><td><a href="#m1"><b>test</b>  </a></td><td class="numi">1</td><td>1503917912369</td><td class="numi">100990</td></tr>
+<tr><th colspan="4">Mobile Test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">com.ctli.it.mobiletestcase.NaukriMobileTestCase</td><td><a href="#m1"><b>test</b>  </a></td><td class="numi">1</td><td>1503932633582</td><td class="numi">131283</td></tr>
 </table>
 <h1>FF Test</h1>
-<h2 id="m1">com.ctli.it.testcases.NaukriTestCase1:test</h2>
+<h1>IE Test</h1>
+<h1>Mobile Test</h1>
+<h2 id="m1">com.ctli.it.mobiletestcase.NaukriMobileTestCase:test</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
