--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -8,7 +8,7 @@
 <h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>1 test</td>
+<td>3 tests</td>
 <td><a target='mainFrame' href='classes.html'>1 class</a></td>
 <td>1 method:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
@@ -20,10 +20,26 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>FF Test (0/0/0)</td><td valign='top' align='right'>
+  <a href='FF Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>IE Test (0/0/0)</td><td valign='top' align='right'>
+  <a href='IE Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>FF Test (1/0/0)</td><td valign='top' align='right'>
-  <a href='FF Test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Mobile Test (1/0/0)</td><td valign='top' align='right'>
+  <a href='Mobile Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
